--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -1,3 +1,35 @@
+<div class="navbar navbar-inverse navbar-fixed-top" id="navbar">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse"> 
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</a> 
+				<a class="brand" href="#" style="margin: 0 1em 0 0">Lorem Ips</a>
+				<div class="nav-collapse collapse">
+					<!-- 
+					<ul class="nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#about" class="btn btn-primary btn-large">Novo</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+					 -->
+					 <a href="http://camiloporto.wufoo.com/forms/z7x3p3/" 
+					 	class="btn btn-primary" target="_blank">Cadastre um Novo Imóvel</a>
+					<form class="navbar-search pull-right">
+						<input class="search-query" type="text" placeholder="Pesquisa..."></input>
+						<button type="submit" class="btn">Procurar</button>
+					</form>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
+
+
+<!--  
 <div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" version="2.0">
   <jsp:directive.page contentType="text/html;charset=UTF-8" />
   <jsp:output omit-xml-declaration="yes" />
@@ -9,3 +41,4 @@
     <img src="${banner}" />
   </a>
 </div> 
+-->
