--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -20,5 +20,9 @@
   <definition name="uncaughtException" extends="public">
     <put-attribute name="body" value="/WEB-INF/views/uncaughtException.jspx" />
   </definition>
+  
+  <definition name="index-imovel" extends="main">
+  	<put-attribute name="body" value="/WEB-INF/views/index.jsp" />
+  </definition>
 
 </tiles-definitions>
