--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top" id="navbar">
+<div class="navbar navbar-inverse navbar-fixed-top" id="navbar" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" version="2.0">
 		<div class="navbar-inner">
 			<div class="container">
 				<a class="btn btn-navbar" data-toggle="collapse"
@@ -9,16 +9,9 @@
 				</a> 
 				<a class="brand" href="#" style="margin: 0 1em 0 0">Lorem Ips</a>
 				<div class="nav-collapse collapse">
-					<!-- 
-					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about" class="btn btn-primary btn-large">Novo</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-					 -->
-					 <a href="http://camiloporto.wufoo.com/forms/z7x3p3/" 
-					 	class="btn btn-primary" target="_blank">Cadastre um Novo Imóvel</a>
-					<form class="navbar-search pull-right">
+					 <a href="http://camiloporto.wufoo.com/forms/z7x3p3/" class="btn btn-primary" target="_blank">Cadastre um Novo Imovel</a>
+
+					<form id="searchForm" class="navbar-search pull-right" action="./usuarios/login" method="post">
 						<input class="search-query" type="text" placeholder="Pesquisa..."></input>
 						<button type="submit" class="btn">Procurar</button>
 					</form>
@@ -27,18 +20,3 @@
 			</div>
 		</div>
 	</div>
-
-
-<!--  
-<div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" version="2.0">
-  <jsp:directive.page contentType="text/html;charset=UTF-8" />
-  <jsp:output omit-xml-declaration="yes" />
-
-  <spring:url var="banner" value="/resources/images/banner-graphic.png" />
-  <spring:url var="home" value="/" />
-  <spring:message code="button_home" var="home_label" htmlEscape="false" />
-  <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
-    <img src="${banner}" />
-  </a>
-</div> 
--->
