--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -24,5 +24,9 @@
   <definition name="index-imovel" extends="main">
   	<put-attribute name="body" value="/WEB-INF/views/index.jsp" />
   </definition>
+  
+  <definition name="lista-imovel" extends="main">
+  	<put-attribute name="body" value="/WEB-INF/views/realestate/index.jsp" />
+  </definition>
 
 </tiles-definitions>
