--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -25,7 +25,7 @@
   	<put-attribute name="body" value="/WEB-INF/views/index.jsp" />
   </definition>
   
-  <definition name="lista-imovel" extends="main">
+  <definition name="realestate/index" extends="main">
   	<put-attribute name="body" value="/WEB-INF/views/realestate/index.jsp" />
   </definition>
 
