--- a/src/main/webapp/WEB-INF/views/footer.jspx
+++ b/src/main/webapp/WEB-INF/views/footer.jspx
@@ -2,3 +2,17 @@
 <div class="container">
 	<footer class="footer" style="margin : 2em 0;">© Lorem Ips</footer>
 </div>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript">
+		$("#searchForm").submit(function() {
+			var form = $(this);
+			var formData = $(this).serialize();
+			$.ajax({ 
+				type: "POST", 
+				url: form.attr("action"), 
+				data: formData, 
+				contentType: "application/x-www-form-urlencoded" 
+			});
+		});
+</script>
