--- a/src/main/webapp/WEB-INF/layouts/layouts.xml
+++ b/src/main/webapp/WEB-INF/layouts/layouts.xml
@@ -19,7 +19,7 @@
   <!-- Layout do inquilinus -->
   <definition name="main" template="/WEB-INF/layouts/layout-main.jspx">
   	<put-attribute name="header" value="/WEB-INF/views/header.jspx" />
-    <put-attribute name="footer" value="/WEB-INF/views/footer.jspx" />
+    <put-attribute name="footer" value="/WEB-INF/views/footer.jsp" />
   </definition>
 
 </tiles-definitions>
