templates criados usando tiles

--- a/src/main/webapp/WEB-INF/layouts/layouts.xml
+++ b/src/main/webapp/WEB-INF/layouts/layouts.xml
@@ -8,12 +8,12 @@
   <definition name="default" template="/WEB-INF/layouts/default.jspx">
     <put-attribute name="header" value="/WEB-INF/views/header.jspx" />
     <put-attribute name="menu" value="/WEB-INF/views/menu.jspx" />
-    <put-attribute name="footer" value="/WEB-INF/views/footer.jspx" />
+    <put-attribute name="footer" value="/WEB-INF/views/footer.jsp" />
   </definition>
 
   <definition name="public" template="/WEB-INF/layouts/default.jspx">
     <put-attribute name="header" value="/WEB-INF/views/header.jspx" />
-    <put-attribute name="footer" value="/WEB-INF/views/footer.jspx" />
+    <put-attribute name="footer" value="/WEB-INF/views/footer.jsp" />
   </definition>
   
   <!-- Layout do inquilinus -->
