--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -9,15 +9,15 @@
     <put-attribute name="body" value="/WEB-INF/views/index.jspx" />
   </definition>
 
-  <definition name="dataAccessFailure" extends="public">
+  <definition name="dataAccessFailure" extends="main">
     <put-attribute name="body" value="/WEB-INF/views/dataAccessFailure.jspx" />
   </definition>
 
-  <definition name="resourceNotFound" extends="public">
+  <definition name="resourceNotFound" extends="main">
     <put-attribute name="body" value="/WEB-INF/views/resourceNotFound.jspx" />
   </definition>
 
-  <definition name="uncaughtException" extends="public">
+  <definition name="uncaughtException" extends="main">
     <put-attribute name="body" value="/WEB-INF/views/uncaughtException.jspx" />
   </definition>
   
@@ -30,7 +30,7 @@
   </definition>
   
   <definition name="realestate/detail" extends="main">
-  	<put-attribute name="body" value="/WEB-INF/views/realestate/index.jsp" />
+  	<put-attribute name="body" value="/WEB-INF/views/realestate/detail.jsp" />
   </definition>
 
 </tiles-definitions>
