corrigido bug do javascript da div de upload da tela de detalhes de imovel

--- a/src/main/webapp/WEB-INF/layouts/layout-main.jspx
+++ b/src/main/webapp/WEB-INF/layouts/layout-main.jspx
@@ -29,5 +29,7 @@
 	<tiles:insertAttribute name="header" ignore="true"/>
 	<tiles:insertAttribute name="body" ignore="true"/>
 	<tiles:insertAttribute name="footer" ignore="true"/>
+	<tiles:insertAttribute name="customJS" ignore="true"/>
+	
 </body>
 </html>
