--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -1,4 +1,5 @@
 <div class="navbar navbar-inverse navbar-fixed-top" id="navbar" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" version="2.0">
+	<c:url var="searchFormAction" value="/realestates" />
 		<div class="navbar-inner">
 			<div class="container">
 				<a class="btn btn-navbar" data-toggle="collapse"
@@ -11,8 +12,8 @@
 				<div class="nav-collapse collapse">
 					 <a href="http://camiloporto.wufoo.com/forms/z7x3p3/" class="btn btn-primary" target="_blank">Cadastre um Novo Imovel</a>
 
-					<form id="searchForm" class="navbar-search pull-right" action="./usuarios/login" method="post">
-						<input class="search-query" type="text" placeholder="Pesquisa..."></input>
+					<form id="searchForm" class="navbar-search pull-right" action="${searchFormAction}" method="get">
+						<input class="search-query" type="text" name="q" id="q" placeholder="Pesquisa..."></input>
 						<button type="submit" class="btn">Procurar</button>
 					</form>
 				</div>
