configurado codigo do google analytics na pagina inicial

--- a/src/main/webapp/WEB-INF/layouts/layout-main.jspx
+++ b/src/main/webapp/WEB-INF/layouts/layout-main.jspx
@@ -30,6 +30,18 @@
 	<tiles:insertAttribute name="body" ignore="true"/>
 	<tiles:insertAttribute name="footer" ignore="true"/>
 	<tiles:insertAttribute name="customJS" ignore="true"/>
-	
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-27509209-3']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </body>
 </html>
