refatorado titulo da pagina. formulario de busca do cabecalho e espacamento e informacoes dos items do resultado

--- a/src/main/webapp/WEB-INF/layouts/layout-main.jspx
+++ b/src/main/webapp/WEB-INF/layouts/layout-main.jspx
@@ -12,7 +12,7 @@
 		
 	<link href="${cssBootstrapMin}" rel="stylesheet" media="screen" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Inquilinus.com</title>
+	<title>Inquilinus.com - Ajudando Você a Morar Melhor</title>
 	<!-- Estilo da pagina principal -->
 	<style type="text/css">
 	  	body {
