--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -17,7 +17,7 @@
 				<div class="nav-collapse collapse">
 					<div class="pull-right">
 						 <a style="margin: 0.5em 1em 0em 0;"
-						 	href="http://camiloporto.wufoo.com/forms/z7x3p3/" class="btn" target="_blank">Novo Cadastro</a>
+						 	href="http://inquilinus.wufoo.com/forms/z7x3p3/" class="btn" target="_blank">Novo Cadastro</a>
 	
 						<form id="searchForm" class="navbar-search pull-right form-search" action="${searchFormAction}" method="get">
 							<div class="input-append">
