configurado Google Analytics EventTrack em alguns links chaves: busca home page, novo imovel home, busca e novo imovel no header, detalhes de imovel no resultado da busca

--- a/src/main/webapp/WEB-INF/views/views.xml
+++ b/src/main/webapp/WEB-INF/views/views.xml
@@ -28,6 +28,7 @@
   
   <definition name="realestate/index" extends="main">
   	<put-attribute name="body" value="/WEB-INF/views/realestate/index.jsp" />
+  	<put-attribute name="customJS" value="/WEB-INF/views/realestate/index-js.jsp" />
   </definition>
   
   <definition name="realestate/detail" extends="main">
