--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -17,12 +17,16 @@
 				<div class="nav-collapse collapse">
 					<div class="pull-right">
 						 <a style="margin: 0.5em 1em 0em 0;"
+						 	onclick="_gaq.push(['_trackEvent', 'LinksAndButtons', 'Click', 'HeaderNewImovelButton']);"
 						 	href="http://inquilinus.wufoo.com/forms/z7x3p3/" class="btn" target="_blank">Novo Cadastro</a>
 	
 						<form id="searchForm" class="navbar-search pull-right form-search" action="${searchFormAction}" method="get">
 							<div class="input-append">
 								<input class="search-query" type="text" name="q" id="q" placeholder="Pesquisa..."></input>
-								<button type="submit" class="btn btn-primary">Procurar</button>
+								<button 
+									type="submit"
+									onclick="_gaq.push(['_trackEvent', 'LinksAndButtons', 'Click', 'HeaderSearchButton']);" 
+									class="btn btn-primary">Procurar</button>
 							</div>
 						</form>
 					</div>
