--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -17,6 +17,7 @@
 				<div class="nav-collapse collapse">
 					<div class="pull-right">
 						 <a style="margin: 0.5em 1em 0em 0;"
+						 	onclick="_gaq.push(['_trackEvent', 'LinksAndButtons', 'Click', 'HeaderNewImovelButton']);"
 						 	href="#newImovelDiv" class="btn" data-toggle="modal" role="button">Novo Cadastro</a>
 	
 						<form id="searchForm" class="navbar-search pull-right form-search" action="${searchFormAction}" method="get">
